# VersusMode

./: CMakeLists.txt  README.md  about.md  changelog.md  main.cpp  mod.json
.github/workflows/: main.yml
src/: main.cpp
